chore: add dialyxir

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ utilex-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+# Ignore Dialyzer PLT files
+/priv/plts/*.plt
+/priv/plts/*.plt.hash
